Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/NestedEnum.out
- compiler.warn.source.no.system.modules.path: 15
NestedEnum.java:13:9: compiler.err.static.declaration.not.allowed.in.inner.classes
1 error
1 warning
